--- a/app/deploy_invoker/Dockerfile
+++ b/app/deploy_invoker/Dockerfile
@@ -2,9 +2,11 @@ FROM golang:1.16.4-alpine AS build
 WORKDIR /src
 ENV CGO_ENABLED=0
 COPY . .
-ENV GOOS=linux
-ENV GOARCH=amd64
-RUN GOOS=${GOOS} GOARCH=${GOARCH} go build -o /out/deploy-broker main.go
+#ENV GOOS=linux
+#ENV GOARCH=amd64
+#RUN GOOS=${GOOS} GOARCH=${GOARCH} go build -o /out/deploy-invoker app/deploy_invoker/main/main.go
+RUN go build -o /out/deploy-invoker app/deploy_invoker/main/main.go
 
 FROM alpine
-COPY --from=build /out/deploy-agent /usr/bin
+COPY --from=build /out/deploy-invoker /usr/bin
+ENTRYPOINT ["/usr/bin/deploy-invoker"]
